--- a/app/src/main/res/layout/item_pacote.xml
+++ b/app/src/main/res/layout/item_pacote.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:id="@+id/item_pacote_cardview"
@@ -12,8 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:background="@color/colorPrimaryDark"
-        app:cardCornerRadius="10dp"
         app:cardBackgroundColor="@color/colorPrimary"
+        app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,6 +27,7 @@
                 android:id="@+id/item_pacote_imagem"
                 android:layout_width="0dp"
                 android:layout_height="100dp"
+                android:contentDescription="@string/imagem_do_local"
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,6 @@
                 android:textColor="@android:color/white"
                 android:textSize="14sp"
                 android:textStyle="bold"
-
                 app:layout_constraintBottom_toBottomOf="@id/item_pacote_imagem"
                 app:layout_constraintEnd_toEndOf="@id/item_pacote_imagem"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -69,6 +68,7 @@
                 android:layout_margin="8dp"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                android:textColor="@android:color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -80,7 +80,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:textColor="@android:color/holo_green_dark"
+                android:textColor="@android:color/white"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@id/item_pacote_dias"
