--- a/app/src/main/res/layout/activity_pagamento.xml
+++ b/app/src/main/res/layout/activity_pagamento.xml
@@ -50,6 +50,7 @@
         android:hint="Número do cartão"
         android:inputType="number"
         android:maxLength="12"
+        android:nextFocusDown="@id/pagamento_mes_cartao"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pagamento_preco_pacote" />
@@ -61,9 +62,10 @@
         android:hint="MM"
         android:inputType="number"
         android:maxLength="2"
+        android:nextFocusDown="@id/pagamento_ano_cartao"
         android:textAlignment="center"
-        app:layout_constraintStart_toStartOf="@+id/pagamento_numero_cartao"
-        app:layout_constraintTop_toBottomOf="@id/pagamento_numero_cartao" />
+        app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc_cartao"
+        app:layout_constraintStart_toStartOf="@+id/pagamento_numero_cartao" />
 
     <EditText
         android:id="@+id/pagamento_ano_cartao"
@@ -72,7 +74,46 @@
         android:hint="AA"
         android:inputType="number"
         android:maxLength="2"
+        android:nextFocusDown="@id/pagamento_cvc_cartao"
         android:textAlignment="center"
-        app:layout_constraintStart_toEndOf="@+id/pagamento_mes_cartao"
+        app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc_cartao"
+        app:layout_constraintStart_toEndOf="@+id/pagamento_mes_cartao" />
+
+    <EditText
+        android:id="@+id/pagamento_cvc_cartao"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
+        android:drawableLeft="@drawable/ic_cvc_cartao_de_credito"
+        android:hint="CVC"
+        android:inputType="number"
+        android:maxLength="3"
+        android:nextFocusDown="@id/pagamento_nome_no_cartao"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="@+id/pagamento_numero_cartao"
         app:layout_constraintTop_toBottomOf="@id/pagamento_numero_cartao" />
+
+    <EditText
+        android:id="@+id/pagamento_nome_no_cartao"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:digits="abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ "
+        android:hint="Nome no cartão"
+        android:inputType="text"
+        app:layout_constraintEnd_toEndOf="@id/pagamento_cvc_cartao"
+        app:layout_constraintStart_toStartOf="@id/pagamento_mes_cartao"
+        app:layout_constraintTop_toBottomOf="@+id/pagamento_cvc_cartao" />
+
+    <Button
+        android:id="@+id/pagamento_botao_finaliza_compra"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/botao_oval_laranja"
+        android:text="Finalizar compra"
+        android:textColor="@android:color/white"
+        app:layout_constraintEnd_toEndOf="@id/pagamento_nome_no_cartao"
+        app:layout_constraintStart_toStartOf="@id/pagamento_nome_no_cartao"
+        app:layout_constraintTop_toBottomOf="@id/pagamento_nome_no_cartao" />
+
 </android.support.constraint.ConstraintLayout>
