--- a/app/src/main/res/layout/activity_pagamento.xml
+++ b/app/src/main/res/layout/activity_pagamento.xml
@@ -4,16 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.PagamentoActivity">
+    tools:ignore="Autofill">
 
     <TextView
         android:id="@+id/pagamento_orientacao"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:text="Digite as informações do cartão de crédito que você deseja usar para o pagamento"
+        android:layout_margin="20dp"
+        android:text="@string/orientacao_pagamento"
         android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +25,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
-        android:text="Valor da compra:"
+        android:text="@string/valor_da_compra"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pagamento_orientacao" />
 
@@ -47,10 +45,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:hint="Número do cartão"
+        android:hint="@string/numero_do_cartao"
         android:inputType="number"
         android:maxLength="12"
-        android:nextFocusDown="@id/pagamento_mes_cartao"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pagamento_preco_pacote" />
@@ -59,10 +56,9 @@
         android:id="@+id/pagamento_mes_cartao"
         android:layout_width="40dp"
         android:layout_height="wrap_content"
-        android:hint="MM"
+        android:hint="@string/mes_cartao"
         android:inputType="number"
         android:maxLength="2"
-        android:nextFocusDown="@id/pagamento_ano_cartao"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc_cartao"
         app:layout_constraintStart_toStartOf="@+id/pagamento_numero_cartao" />
@@ -71,10 +67,9 @@
         android:id="@+id/pagamento_ano_cartao"
         android:layout_width="40dp"
         android:layout_height="wrap_content"
-        android:hint="AA"
+        android:hint="@string/ano_cartao"
         android:inputType="number"
         android:maxLength="2"
-        android:nextFocusDown="@id/pagamento_cvc_cartao"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc_cartao"
         app:layout_constraintStart_toEndOf="@+id/pagamento_mes_cartao" />
@@ -85,10 +80,9 @@
         android:layout_height="wrap_content"
         android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
         android:drawableLeft="@drawable/ic_cvc_cartao_de_credito"
-        android:hint="CVC"
+        android:hint="@string/cvc_pagamento"
         android:inputType="number"
         android:maxLength="3"
-        android:nextFocusDown="@id/pagamento_nome_no_cartao"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="@+id/pagamento_numero_cartao"
         app:layout_constraintTop_toBottomOf="@id/pagamento_numero_cartao" />
@@ -97,8 +91,8 @@
         android:id="@+id/pagamento_nome_no_cartao"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:digits="abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ "
-        android:hint="Nome no cartão"
+        android:digits="@string/mascara_nome_no_cartao"
+        android:hint="@string/nome_no_cartao"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="@id/pagamento_cvc_cartao"
         app:layout_constraintStart_toStartOf="@id/pagamento_mes_cartao"
@@ -110,7 +104,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:background="@drawable/botao_oval_laranja"
-        android:text="Finalizar compra"
+        android:text="@string/finalizar_compra"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="@id/pagamento_nome_no_cartao"
         app:layout_constraintStart_toStartOf="@id/pagamento_nome_no_cartao"
